objects/Lead_Interim_Assignment__c.object
<CustomObject>
    <label>Lead Interim Assignment</label>
    <nameField>
        <label>Lead Interim Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Interim Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Originial_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originial Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Interim_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Replacement_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replacement Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Interim_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>